<resources>
    <string name="app_name">skincare3</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="skincare">SKINCARE++</string>
    <string name="health_at_your_fingertips">HEALTH AT YOUR FINGERTIPS</string>
    <string name="right_at_your_comfort">RIGHT AT YOUR COMFORT</string>
    <string name="register">register</string>
    <string name="capture">CAPTURE</string>
    <string name="upload">UPLOAD</string>
    <string name="submit">SUBMIT</string>
    <string name="todo">TODO</string>
</resources>